<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                style="@style/header">

                <LinearLayout
                    style="@style/item"
                    android:layout_weight="0.25">

                    <TextView
                        style="@style/text.title"
                        android:text="5"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/text_project"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/HeadSeparator">
                </LinearLayout>

                <LinearLayout
                    style="@style/item"
                    android:layout_weight="0.5">

                    <TextView
                        style="@style/text.title"
                        android:text="2500"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/text_count_code_strings"/>
                </LinearLayout>

                <LinearLayout
                    style="@style/HeadSeparator">
                </LinearLayout>

                <LinearLayout
                    style="@style/item"
                    android:layout_weight="0.25">

                    <TextView
                        style="@style/text.title"
                        android:text="5"/>

                    <TextView
                        style="@style/text"
                        android:text="@string/text_count_projects"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/left_medium_margin_32"
                    android:layout_marginRight="@dimen/right_small_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit"
                            android:hint="@string/hint_phone"
                            android:inputType="phone"
                            android:text="@string/text_phone"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_size_1"
                android:layout_marginLeft="@dimen/left_large_margin_72"
                android:background="@color/gray_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_mail_black_24dp"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/left_medium_margin_32"
                    android:layout_marginRight="@dimen/right_small_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            android:text="@string/text_email"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_size_1"
                android:layout_marginLeft="@dimen/left_large_margin_72"
                android:background="@color/gray_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_vk_circle"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_large_72"
                    android:layout_marginLeft="@dimen/left_medium_margin_32"
                    android:layout_marginRight="@dimen/right_small_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit"
                            android:hint="@string/hint_vk"
                            android:inputType="textMultiLine"
                            android:text="@string/text_vk"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_size_1"
                android:layout_marginLeft="@dimen/left_large_margin_72"
                android:background="@color/gray_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_github_circle"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_medium_margin_32"
                    android:layout_marginRight="@dimen/right_small_margin_16"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit"
                            android:hint="@string/hint_github_repo"
                            android:inputType="textMultiLine"
                            android:text="@string/text_github_repo"
                            />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_separator_size_1"
                android:layout_marginLeft="@dimen/left_large_margin_72"
                android:background="@color/gray_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small_8"
                android:layout_marginTop="@dimen/spacing_small_8"
                android:orientation="horizontal">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle_black_24px"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_medium_margin_32"
                    android:layout_marginRight="@dimen/right_small_margin_16"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            style="@style/edit"
                            android:hint="@string/hint_about_me"
                            android:inputType="textMultiLine"
                            android:text="@string/text_about_me"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
